fix: message align

--- a/src/components/message2/message.scss
+++ b/src/components/message2/message.scss
@@ -38,6 +38,7 @@ $messageDistance: 4PX;
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
+    margin: 0 auto;
   }
 
   &__wrap {
